--- a/1-9ensyu.html
+++ b/1-9ensyu.html
@@ -12,47 +12,30 @@
     <header></header>
 
     <main>
-      <section class="box">
         <div class="box-item">
-          <img class="box-image" src="img/flow01.png" />
-        <section class="box-text">
+          <div class="box-img1"></div>
           <h3 class="box-text-heading">タイトルが入ります</h3>
-          <p class="box-text-2">
-            文章が入ります。文章が入ります。文章が入りま<br>
-            す。文章が入ります。文章が入ります。文章が入り<br>
-            ます。文章が入ります。文章が入ります。文章が入<br>
-            ります。
+          <p class="box-text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
            </p>
            <span class="category">step1</span>
-        </section>
-        </div>
+          </div>
         <div class="box-item">
-          <img class="box-image" src="img/flow02.png" />
-        <section class="box-text">
+          <div class="box-img2"></div>
           <h3 class="box-text-heading">タイトルが入ります</h3>
-          <p class="box-text-2">
-            文章が入ります。文章が入ります。文章が入りま<br>
-            す。文章が入ります。文章が入ります。文章が入り<br>
-            ます。文章が入ります。文章が入ります。文章が入<br>
-            ります。
+          <p class="box-text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
            </p>
            <span class="category">step2</span>
-        </section>
         </div>
         <div class="box-item">
-          <img class="box-image" src="img/flow03.png" />
-        <section class="box-text">
+          <div class="box-img3"></div>
           <h3 class="box-text-heading">タイトルが入ります</h3>
-          <p class="box-text-2">
-            文章が入ります。文章が入ります。文章が入りま<br>
-            す。文章が入ります。文章が入ります。文章が入り<br>
-            ます。文章が入ります。文章が入ります。文章が入<br>
-            ります。
+          <p class="box-text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
            </p>
            <span class="category">step3</span>
-        </section>
         </div>
-      </section>
     </main>
     <footer></footer>
   </body>
